--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ MAIL_NAME=no-reply
 API_KEY=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
 
 LOCAL_PORT=8080
+
+#NEW_RELIC
+NEW_RELIC_LICENSE_KEY=d02489c1adf3d89ee801fafe3a199e228cdaNRAL
