--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER=u741431906_emails_app
-DB_PASSWORD="2:E[^hL#Q@xg"
+DB_PASSWORD=!uF0y!H0
 DB_HOST=sql848.main-hosting.eu
 DB_PORT=3306
 DB_NAME=u741431906_emails_app
